# hey-sh

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
hey/: __main__.py  cli.py  clipboard.py  config.py  history.py  llm.py  shell.py
tests/: test_cli.py  test_clipboard.py  test_config.py  test_history.py  test_llm.py  test_shell.py
