[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hey-sh"
version = "0.2.0"
description = "Shell-native natural language CLI assistant"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
]

[project.scripts]
hey = "hey.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hey"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
